--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -49,14 +49,14 @@
 </ul>
 
 <div style="min-height: 360px">
-  <h3>Enter a chemical name into the box then click submit. If the name can be interpreted a depiction, SMILES and CML will be returned.</h3>
+  <h3>Enter a chemical name into the box and then click submit. If the name can be interpreted, a depiction, a SMILES string, its InChI and its CML will be returned.</h3>
   <form action="" id="chemicalNameForm">
     <fieldset>
       <input type="text" id="chemicalName" size="100" value="2,4,6-trinitrotoluene" />
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 30/11/10: Improved error message given when parsing fails e.g. 1-chloro-4-unknownylbenzene will now indicate that "4-unknownyl" is uninterpretable specifically the string "unknown". Minor bug fixes</span><br/> Depiction and SMILES courtesy of the <a href="http://cdk.sourceforge.net/">CDK</a>. Note that this web interface is primarily for demonstration purposes.</p>
+  <p><span id="last-update">Updated 10/12/10: Added support for spiro systems named using rule A-42 of the 1979 blue book</span><br/> Depiction and SMILES courtesy of the <a href="http://cdk.sourceforge.net/">CDK</a>. Note that this web interface is primarily for demonstration purposes.</p>
   <div id="results" style="display:none">
     <p><img id="depiction" src="" alt="" /></p>
     <h3>InChI:</h3>
