Web service now uses OPSIN to directly produce isomeric SMILES

--- a/src/main/webapp/instructions.html
+++ b/src/main/webapp/instructions.html
@@ -43,7 +43,7 @@
     <li>.no2d.cml gives CML without 2d coordinates</li>
     <li>.inchi gives InChI</li>
     <li>.png gives a depiction</li>
-    <li>.smi gives SMILES (current achiral)</li>
+    <li>.smi gives SMILES</li>
   </ul>
   <p>For example <a href="http://opsin.ch.cam.ac.uk/opsin/cyclopropane.png">http://opsin.ch.cam.ac.uk/opsin/cyclopropane.png</a> yields a depiction of cyclopropane.</p>
   <h3>By content negotiation:</h3>
@@ -53,7 +53,7 @@
     <li>chemical/x-no2d-cml for CML without 2d coordinates</li>
     <li>chemical/x-inchi for InChI</li>
     <li>image/png for png depiction</li>
-    <li>chemical/x-daylight-smiles for SMILES (current achiral)</li>
+    <li>chemical/x-daylight-smiles for SMILES</li>
   </ul>
   <p>The web service resides at http://opsin.ch.cam.ac.uk/opsin/</p>
   <h2>Specification of non ASCII characters:</h2>
@@ -96,7 +96,7 @@
 <!-- end of #content -->
 
 <ul id="site-info">
-  <li class="copy">&copy; 2009-2010 <a href="mailto:dl387@cam.ac.uk">Daniel Lowe</a>, Unilever Centre for Molecular Science Informatics</li>
+  <li class="copy">&copy; 2009-2011 <a href="mailto:dl387@cam.ac.uk">Daniel Lowe</a>, Unilever Centre for Molecular Science Informatics</li>
   <li class="link last"><a href="http://www.ch.cam.ac.uk/privacy.html">Privacy</a></li>
   <li class="link"><a href="http://www.cam.ac.uk/site/">Accessibility</a></li>
 </ul>
