--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -56,12 +56,12 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 10/12/10: Added support for spiro systems named using rule A-42 of the 1979 blue book</span><br/> Depiction and SMILES courtesy of the <a href="http://cdk.sourceforge.net/">CDK</a>. Note that this web interface is primarily for demonstration purposes.</p>
+  <p><span id="last-update">Updated 24/1/11: SMILES output now includes stereochemistry. Minor bug fixes</span><br/> Depiction courtesy of the <a href="http://cdk.sourceforge.net/">CDK</a>. Note that this web interface is primarily for demonstration purposes.</p>
   <div id="results" style="display:none">
     <p><img id="depiction" src="" alt="" /></p>
     <h3>InChI:</h3>
     <p id="inchi"></p>
-    <h3>SMILES (No stereochemistry):</h3>
+    <h3>SMILES (With stereochemistry!):</h3>
     <p id="smiles"></p>
     <h3>CML:</h3>
     <pre id="cml"></pre>
@@ -88,7 +88,7 @@
 <!-- end of #content -->
 
 <ul id="site-info">
-  <li class="copy">&copy; 2009-2010 <a href="mailto:dl387@cam.ac.uk">Daniel Lowe</a>, Unilever Centre for Molecular Science Informatics</li>
+  <li class="copy">&copy; 2009-2011 <a href="mailto:dl387@cam.ac.uk">Daniel Lowe</a>, Unilever Centre for Molecular Science Informatics</li>
   <li class="link last"><a href="http://www.ch.cam.ac.uk/privacy.html">Privacy</a></li>
   <li class="link"><a href="http://www.cam.ac.uk/site/">Accessibility</a></li>
 </ul>
