--- a/src/main/webapp/information.html
+++ b/src/main/webapp/information.html
@@ -233,7 +233,7 @@ DOI: <a href="http://dx.doi.org/10.1007/11875741_11">10.1007/11875741_11</a></p>
 <a href="http://jni-inchi.sourceforge.net/">JNI-InChI</a> is used to generate InChIs.
 Additionally for testing  <a href="http://www.junit.org/">JUnit</a> and <a href="http://mockito.org/">Mockito</a> are employed.
 The web interface is powered by <a href="http://www.restlet.org">Restlet</a> with the <a href="http://cdk.sourceforge.net/">Chemistry Development Kit</a>
-being used for 2D coordinate generation, depiction and SMILES generation.</p>
+being used for 2D coordinate generation and depiction.</p>
 
 <h3 id="license">License and Warranty</h3>
 <p>OPSIN is licensed under the <a href="http://www.opensource.org/licenses/artistic-license-2.0.php">Artistic License v2.0</a></p>
@@ -261,7 +261,7 @@ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
 <!-- end of #content -->
 
 <ul id="site-info">
-  <li class="copy">&copy; 2009-2010 <a href="mailto:dl387@cam.ac.uk">Daniel Lowe</a>, Unilever Centre for Molecular Science Informatics</li>
+  <li class="copy">&copy; 2009-2011 <a href="mailto:dl387@cam.ac.uk">Daniel Lowe</a>, Unilever Centre for Molecular Science Informatics</li>
   <li class="link last"><a href="http://www.ch.cam.ac.uk/privacy.html">Privacy</a></li>
   <li class="link"><a href="http://www.cam.ac.uk/site/">Accessibility</a></li>
 </ul>
