Updated to using the Indigo toolkit for depiction and 2D coordinate generation. Changed license of the OPSIN web service to the GPLv3 for compatability with the Indigo toolkit

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -56,7 +56,7 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 24/1/11: SMILES output now includes stereochemistry. Minor bug fixes</span><br/> Depiction courtesy of the <a href="http://cdk.sourceforge.net/">CDK</a>. Note that this web interface is primarily for demonstration purposes.</p>
+  <p><span id="last-update">Updated 9/2/11: Switched to the Indigo toolkit for 2D depiction. Bug fixes</span><br/> Depiction courtesy of the <a href="http://ggasoftware.com/opensource/indigo">Indigo Toolkit</a></p>
   <div id="results" style="display:none">
     <p><img id="depiction" src="" alt="" /></p>
     <h3>InChI:</h3>
