--- a/src/main/webapp/information.html
+++ b/src/main/webapp/information.html
@@ -208,15 +208,15 @@ selenones, selenoxides, selones, selenoketones, selenosemicarbazone, semicarbazo
   </tr>
   <tr>
     <td>R/S stereochemistry</td>
-    <td>(1R,3S)-3-amino-3-methylcyclohexanecarboxylic acid</td>
+    <td><a href="../opsin/(1R%2C3S)-3-amino-3-methylcyclohexanecarboxylic%20acid.png">(1R,3S)-3-amino-3-methylcyclohexanecarboxylic acid</a></td>
   </tr>
   <tr>
     <td>E/Z stereochemistry</td>
-		<td>(2Z)-but-2-ene</td>
+		<td><a href="../opsin/(2Z)-but-2-ene.png">(2Z)-but-2-ene</a></td>
   </tr>
   <tr>
     <td>Structure-based polymer names</td>
-    <td>poly(2,2'-diamino-5-hexadecylbiphenyl-3,3'-diyl)</td>
+    <td><a href="../opsin/poly(2%2C2'-diamino-5-hexadecylbiphenyl-3%2C3'-diyl).png">poly(2,2'-diamino-5-hexadecylbiphenyl-3,3'-diyl)</a></td>
   </tr>
 </table>
 <p>*Fused ring systems involving non 6-membered rings which are not in a "chain" cannot currently be numbered e.g. indeno[2,1-c]pyridine can be numbered, benzo[cd]indole cannot</p>
@@ -232,7 +232,7 @@ DOI: <a href="http://dx.doi.org/10.1007/11875741_11">10.1007/11875741_11</a></p>
 <a href="http://www.xom.nu/">XOM</a> is used as an XML framework for reading in resource files and for holding information about how a name was parsed. 
 <a href="http://jni-inchi.sourceforge.net/">JNI-InChI</a> is used to generate InChIs.
 Additionally for testing  <a href="http://www.junit.org/">JUnit</a> and <a href="http://mockito.org/">Mockito</a> are employed.
-The web interface is powered by <a href="http://www.restlet.org">Restlet</a> with the <a href="http://cdk.sourceforge.net/">Chemistry Development Kit</a>
+The web interface is powered by <a href="http://www.restlet.org">Restlet</a> with the <a href="http://ggasoftware.com/opensource/indigo">Indigo toolkit</a>
 being used for 2D coordinate generation and depiction.</p>
 
 <h3 id="license">License and Warranty</h3>
