Updated to indigo 1.09beta. This version renders the dependency on the indigo-loader project redundant. Modified depiction parameters to take into account 1.09s new API. Hydrogens are now always displayed on labelled atoms. Added a few more examples of nomenclature supported to information.html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -56,12 +56,12 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 9/2/11: Switched to the Indigo toolkit for 2D depiction. Bug fixes</span><br/> Depiction courtesy of the <a href="http://ggasoftware.com/opensource/indigo">Indigo Toolkit</a></p>
+  <p><span id="last-update">Updated 1/3/11: Added common aldoses and ketoses</span><br/> Depiction courtesy of the <a href="http://ggasoftware.com/opensource/indigo">Indigo Toolkit</a></p>
   <div id="results" style="display:none">
     <p><img id="depiction" src="" alt="" /></p>
     <h3>InChI:</h3>
     <p id="inchi"></p>
-    <h3>SMILES (With stereochemistry!):</h3>
+    <h3>SMILES:</h3>
     <p id="smiles"></p>
     <h3>CML:</h3>
     <pre id="cml"></pre>
