--- a/src/main/webapp/information.html
+++ b/src/main/webapp/information.html
@@ -200,6 +200,18 @@ selenones, selenoxides, selones, selenoketones, selenosemicarbazone, semicarbazo
 		</td>
   </tr>
   <tr>
+    <td>Steroids including alpha/beta stereochemistry</td>
+    <td>
+				<a href="../opsin/(3%CE%B2)-cholest-5-en-3-ol.png">(3β)-cholest-5-en-3-ol</a>
+		</td>
+  </tr>
+  <tr>
+    <td>Open-chain saccharides</td>
+    <td>
+				<a href="../opsin/4-amino-4%2C6-dideoxy-3-C-methyl-2-O-methyl-L-mannose.png">4-amino-4,6-dideoxy-3-C-methyl-2-O-methyl-L-mannose</a>
+		</td>
+  </tr>
+  <tr>
     <td>Basic inorganic support</td>
     <td>
 				<a href="../opsin/aluminium(3%2B)%20chloride.png">aluminium(3+) chloride</a><br/>
@@ -213,6 +225,10 @@ selenones, selenoxides, selones, selenoketones, selenosemicarbazone, semicarbazo
   <tr>
     <td>E/Z stereochemistry</td>
 		<td><a href="../opsin/(2Z)-but-2-ene.png">(2Z)-but-2-ene</a></td>
+  </tr>
+  <tr>
+    <td>cis/trans indicating relative stereochemistry on rings</td>
+		<td><a href="../opsin/cis-1%2C4-dimethylcyclohexane.png">cis-1,4-dimethylcyclohexane</a></td>
   </tr>
   <tr>
     <td>Structure-based polymer names</td>
