Updated to v1.0.0 and added mentions of the just released OPSIN paper

--- a/src/main/webapp/getinvolved.html
+++ b/src/main/webapp/getinvolved.html
@@ -35,7 +35,7 @@
 <div style="min-height: 360px">
   <h3>OPSIN's development can be supported by:</h3>
   <ul>
-    <li>Reporting bugs</li>
+    <li>Reporting bugs (issue tracker available <a href ="https://bitbucket.org/dan2097/opsin/issues">here</a>)</li>
     <li>Adding more nomenclature</li>
     <li>Adding more vocabulary (specifically structures from which derivatives can be named e.g. <a href="http://www.chem.qmul.ac.uk/iupac/sectionF/app.html">these</a>)</li>
   </ul>
