--- a/src/main/webapp/information.html
+++ b/src/main/webapp/information.html
@@ -72,7 +72,7 @@ table#supported-nomenclature td {
   Due to the absence of any open source efforts with broad coverage of organic nomenclature work was started by Peter Murray-Rust and Joe Townsend on such a program.
   This work was continued by Peter Corbett cumulating in the creation of a system broadly similar to the current incarnation <a href="#corbett2006">(Corbett and Murray-Rust 2006)</a>.
   In 2008 Daniel Lowe took over development of the project as part of his PhD during which time the range of nomenclature supported as been expanded substantially, along with improvements to the parser
-  to cope with the complexity of the grammar of chemical names.
+  to cope with the complexity of the grammar of chemical names.<a href="#lowe2011">(Lowe et al. 2011)</a>
 </p>
 <h3 id="nomenclature">Examples of Supported Nomenclature</h3>
 <table id="supported-nomenclature">
@@ -242,6 +242,10 @@ selenones, selenoxides, selones, selenoketones, selenosemicarbazone, semicarbazo
 High-Throughput Identification of Chemistry in Life Science Texts.
 Lecture Notes in Computer Science. 2006, 4216, pp107-118.
 DOI: <a href="http://dx.doi.org/10.1007/11875741_11">10.1007/11875741_11</a></p>
+<p><a id="lowe2011">[2]</a> Daniel M. Lowe, Peter T. Corbett, Peter Murray-Rust, Robert C. Glen.
+Chemical Name to Structure: OPSIN, an Open Source Solution.
+Journal of Chemical Information and Modeling. 2011, Article ASAP.
+DOI: <a href="http://dx.doi.org/10.1021/ci100384d">10.1021/ci100384d</a></p>
 
 <h3 id="libraries">Libraries</h3>
 <p>OPSIN utilises <a href="http://www.brics.dk/automaton/">dk.brics.automaton</a> to provide a discrete finite state automaton to allow the parsing of chemical names.
