--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -56,7 +56,7 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 1/3/11: Added common aldoses and ketoses</span><br/> Depiction courtesy of the <a href="http://ggasoftware.com/opensource/indigo">Indigo Toolkit</a></p>
+  <p><span id="last-update">Updated 9/3/11: v1.0.0 has been released.<br/>A paper describing OPSIN is now available from <a href="http://pubs.acs.org/doi/abs/10.1021/ci100384d">JCIM</a>. If you have found OPSIN useful in your work citing it would be appreciated.</span><br/> Depiction courtesy of the <a href="http://ggasoftware.com/opensource/indigo">Indigo Toolkit</a></p>
   <div id="results" style="display:none">
     <p><img id="depiction" src="" alt="" /></p>
     <h3>InChI:</h3>
