--- a/src/main/webapp/getinvolved.html
+++ b/src/main/webapp/getinvolved.html
@@ -54,6 +54,8 @@
     <dd><a href="getinvolved.html">Get Involved</a></dd>
     <dd><a href="http://bitbucket.org/dan2097/opsin/">BitBucket Project</a></dd>
     <dd><a href="http://bitbucket.org/dan2097/opsin/downloads">Downloads</a></dd>
+	<dd><a href="http://apidoc.ch.cam.ac.uk/opsin/">Maven site</a></dd>
+	<dd><a href="http://pubs.acs.org/articlesonrequest/AOR-PcYgSy87ettZWfqyvHmN">Journal Article</a></dd>
   </dl>
 </div>
 
