--- a/src/main/webapp/information.html
+++ b/src/main/webapp/information.html
@@ -244,7 +244,7 @@ Lecture Notes in Computer Science. 2006, 4216, pp107-118.
 DOI: <a href="http://dx.doi.org/10.1007/11875741_11">10.1007/11875741_11</a></p>
 <p><a id="lowe2011">[2]</a> Daniel M. Lowe, Peter T. Corbett, Peter Murray-Rust, Robert C. Glen.
 Chemical Name to Structure: OPSIN, an Open Source Solution.
-Journal of Chemical Information and Modeling. 2011, Article ASAP.
+Journal of Chemical Information and Modeling. 2011, 51 (3), 739-753
 DOI: <a href="http://dx.doi.org/10.1021/ci100384d">10.1021/ci100384d</a></p>
 
 <h3 id="libraries">Libraries</h3>
@@ -274,6 +274,8 @@ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
     <dd><a href="getinvolved.html">Get Involved</a></dd>
     <dd><a href="http://bitbucket.org/dan2097/opsin/">BitBucket Project</a></dd>
     <dd><a href="http://bitbucket.org/dan2097/opsin/downloads">Downloads</a></dd>
+	<dd><a href="http://apidoc.ch.cam.ac.uk/opsin/">Maven site</a></dd>
+	<dd><a href="http://pubs.acs.org/articlesonrequest/AOR-PcYgSy87ettZWfqyvHmN">Journal Article</a></dd>
   </dl>
 </div>
 
