Made the standard link to the journal article the default link with the option of logging on for free access

--- a/src/main/webapp/error.html
+++ b/src/main/webapp/error.html
@@ -53,8 +53,9 @@
     <dd><a href="../getinvolved.html">Get Involved</a></dd>
     <dd><a href="http://bitbucket.org/dan2097/opsin/">BitBucket Project</a></dd>
     <dd><a href="http://bitbucket.org/dan2097/opsin/downloads">Downloads</a></dd>
-	<dd><a href="http://apidoc.ch.cam.ac.uk/opsin/">Maven site</a></dd>
-	<dd><a href="http://pubs.acs.org/articlesonrequest/AOR-PcYgSy87ettZWfqyvHmN">Journal Article</a></dd>
+    <dd><a href="http://apidoc.ch.cam.ac.uk/opsin/">Maven site</a></dd>
+    <dd><a href="http://pubs.acs.org/doi/full/10.1021/ci100384d">Journal Article</a></dd>
+    <dd><a href="http://pubs.acs.org/articlesonrequest/AOR-PcYgSy87ettZWfqyvHmN">Journal Article (Free access)</a></dd>
   </dl>
 </div>
 
