--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -56,7 +56,7 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 30/3/11: v1.0.0 has been released.<br/>A paper describing OPSIN is now available from <a href="http://pubs.acs.org/articlesonrequest/AOR-PcYgSy87ettZWfqyvHmN">JCIM</a>. If you have found OPSIN useful in your work citing it would be very much appreciated.</span><br/> Depiction courtesy of the <a href="http://ggasoftware.com/opensource/indigo">Indigo Toolkit</a></p>
+  <p><span id="last-update">Updated 4/4/11: v1.0.0 has been released.<br/>A paper describing OPSIN is now available from <a href="http://pubs.acs.org/doi/full/10.1021/ci100384d">JCIM</a>. If you have found OPSIN useful in your work citing it would be very much appreciated.</span><br/> Depiction courtesy of the <a href="http://ggasoftware.com/opensource/indigo">Indigo Toolkit</a></p>
   <div id="results" style="display:none">
     <p><img id="depiction" src="" alt="" /></p>
     <h3>InChI:</h3>
@@ -81,8 +81,9 @@
     <dd><a href="getinvolved.html">Get Involved</a></dd>
     <dd><a href="http://bitbucket.org/dan2097/opsin/">BitBucket Project</a></dd>
     <dd><a href="http://bitbucket.org/dan2097/opsin/downloads">Downloads</a></dd>
-	<dd><a href="http://apidoc.ch.cam.ac.uk/opsin/">Maven site</a></dd>
-	<dd><a href="http://pubs.acs.org/articlesonrequest/AOR-PcYgSy87ettZWfqyvHmN">Journal Article</a></dd>
+    <dd><a href="http://apidoc.ch.cam.ac.uk/opsin/">Maven site</a></dd>
+    <dd><a href="http://pubs.acs.org/doi/full/10.1021/ci100384d">Journal Article</a></dd>
+    <dd><a href="http://pubs.acs.org/articlesonrequest/AOR-PcYgSy87ettZWfqyvHmN">Journal Article (Free access)</a></dd>
   </dl>
 </div>
 
