--- a/src/main/webapp/information.html
+++ b/src/main/webapp/information.html
@@ -150,10 +150,11 @@ table#supported-nomenclature td {
     <td><a href="../opsin/1%2C3%2C5-benzenetriacetic%20acid.png">1,3,5-benzenetriacetic acid</a></td>
   </tr>
   <tr>
-    <td>Fused ring systems*</td>
+    <td>Fused ring systems</td>
     <td>
 				<a href="../opsin/imidazo%5B4%2C5-d%5Dpyridine.png">imidazo[4,5-d]pyridine</a><br/>
-				<a href="../opsin/phenothiazino%5B3'%2C4':5%2C6%5D%5B1%2C4%5Doxazino%5B2%2C3-i%5Dbenzo%5B5%2C6%5D%5B1%2C4%5Dthiazino%5B3%2C2-c%5Dphenoxazine.png">phenothiazino[3',4':5,6][1,4]oxazino[2,3-i]benzo[5,6][1,4]thiazino[3,2-c]phenoxazine</a>
+				<a href="../opsin/phenothiazino%5B3'%2C4':5%2C6%5D%5B1%2C4%5Doxazino%5B2%2C3-i%5Dbenzo%5B5%2C6%5D%5B1%2C4%5Dthiazino%5B3%2C2-c%5Dphenoxazine.png">phenothiazino[3',4':5,6][1,4]oxazino[2,3-i]benzo[5,6][1,4]thiazino[3,2-c]phenoxazine</a><br/>
+				<a href="../opsin/phenanthro%5B4%2C5-bcd%3A1%2C2-c'%5Ddifuran.png">phenanthro[4,5-bcd:1,2-c']difuran</a>
 		</td>
   </tr>
   <tr>
@@ -235,8 +236,6 @@ selenones, selenoxides, selones, selenoketones, selenosemicarbazone, semicarbazo
     <td><a href="../opsin/poly(2%2C2'-diamino-5-hexadecylbiphenyl-3%2C3'-diyl).png">poly(2,2'-diamino-5-hexadecylbiphenyl-3,3'-diyl)</a></td>
   </tr>
 </table>
-<p>*Fused ring systems involving non 6-membered rings which are not in a "chain" cannot currently be numbered e.g. indeno[2,1-c]pyridine can be numbered, benzo[cd]indole cannot</p>
-
 <h3 id="references">References</h3>
 <p><a id="corbett2006">[1]</a> Peter Corbett and Peter Murray-Rust.
 High-Throughput Identification of Chemistry in Life Science Texts.
